--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.9",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.16",
-    "@astrojs/check": "^0.9.4",
+    "pixi.js": "^8.2.5",
+    "stats.js": "^0.17.0",
+    "tailwindcss": "^3.4.15",
+    "tweakpane": "^4.0.4",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "@tweakpane/core": "^2.0.5",
+    "@types/stats.js": "^0.17.3",
+    "daisyui": "^4.12.14",
+    "prettier": "^3.4.1",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
